# vault_service

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  package.json
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  SECURITY.md  VIDEO_GUIDE.md
programs/vault-manager/: Cargo.toml
programs/vault-manager/src/: errors.rs  lib.rs  state.rs
src/: balance_tracker.rs  config.rs  database.rs  errors.rs  main.rs  models.rs  tests.rs  transaction_builder.rs  vault_manager.rs  websocket.rs
src/api/: handlers.rs  mod.rs
tests/: vault-manager.ts
