[workspace]
members = [
    "programs/vault-manager",
]

[package]
name = "vault-manager-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Solana & Anchor
solana-client = "1.17"
solana-sdk = "1.17"
solana-program = "1.17"
anchor-client = "0.29"
anchor-lang = "0.29"
anchor-spl = "0.29"
spl-token = "4.0"
spl-associated-token-account = "2.2"

# Database
mongodb = { version = "2.8", features = ["tokio-runtime"] }
bson = { version = "2.9", features = ["chrono-0_4"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# WebSocket
tokio-tungstenite = "0.21"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
dotenv = "0.15"
bs58 = "0.5"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }